@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
  - designation
}

class Administrator {
  - name
  - email
  - phoneNumber
  - employeeId
}

class Employee {
  - name
  - address
  - phoneNumber
  - email
  - citizenCardNumber
  - employeeId
}

class Receptionist {
  ' Herda atributos de Employee
}

' Relações
Company "1" -- "*" Employee : employs >
Administrator "1" -- "*" Receptionist : registers >
Receptionist --|> Employee : is a >

@enduml